<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_natural_forest"
            android:icon="@drawable/ic_rain"
            android:title="@string/natural_forest" />
        <item
            android:id="@+id/nav_residential_non_areas"
            android:icon="@drawable/ic_building"
            android:title="@string/residential_non_areas" />
        <item
            android:id="@+id/nav_wet_lands"
            android:icon="@drawable/ic_wet"
            android:title="@string/wet_lands" />
        <item
            android:id="@+id/nav_protected_non_areas"
            android:icon="@drawable/ic_security"
            android:title="@string/protected_non_areas" />
        <item
            android:id="@+id/nav_parks"
            android:icon="@drawable/ic_forest"
            android:title="@string/parks" />
        <item
            android:id="@+id/nav_fight_climate_change"
            android:icon="@drawable/ic_info"
            android:title="@string/fight_climate_change" />
    </group>

    <item>
        <menu>
            <item
                android:id="@+id/faq"
                android:icon="@drawable/ic_faq"
                android:title="@string/faq" />
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
