<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">
        <ListPreference
            app:defaultValue="en"
            app:entries="@array/languages"
            app:entryValues="@array/languages_values"
            app:key="APP_LANGUAGE"
            app:title="@string/languages"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="1"
            app:entries="@array/temperature_units"
            app:entryValues="@array/temperature_unit_values"
            app:key="APP_TEMPERATURE_UNIT"
            app:title="@string/temperature_unit_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="1"
            app:entries="@array/wind_speed_units"
            app:entryValues="@array/wind_speed_unit_values"
            app:key="APP_WIND_SPEED_UNIT"
            app:title="@string/wind_speed_unit"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <!--<PreferenceCategory app:title="@string/sync_header">-->

        <!--&lt;!&ndash;<SwitchPreferenceCompat&ndash;&gt;-->
            <!--&lt;!&ndash;app:key="sync"&ndash;&gt;-->
            <!--&lt;!&ndash;app:title="@string/sync_title" />&ndash;&gt;-->

        <!--&lt;!&ndash;<SwitchPreferenceCompat&ndash;&gt;-->
            <!--&lt;!&ndash;app:dependency="sync"&ndash;&gt;-->
            <!--&lt;!&ndash;app:key="attachment"&ndash;&gt;-->
            <!--&lt;!&ndash;app:summaryOff="@string/attachment_summary_off"&ndash;&gt;-->
            <!--&lt;!&ndash;app:summaryOn="@string/attachment_summary_on"&ndash;&gt;-->
            <!--&lt;!&ndash;app:title="@string/attachment_title" />&ndash;&gt;-->

    <!--</PreferenceCategory>-->

</androidx.preference.PreferenceScreen>
