<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    tools:context="com.rema.pollutioncontrol.controllers.ActivityViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <include
            layout="@layout/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.CardView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="125dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="65dp">

                <ImageView
                    android:id="@+id/activity_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="Activity Picture"
                    android:src="@drawable/ic_activity_outdoor" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/activity_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_bold"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                tools:text="Cycling" />

            <android.support.v7.widget.CardView
                android:id="@+id/shape"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:cardElevation="0dp"
                app:cardCornerRadius="12.5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/condition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="0dp"
                        android:fontFamily="@font/nunito_extrabold"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        tools:text="Good" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/colorActivity"
                app:cardElevation="0dp"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa_bold"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:text="@string/favorable_on" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunito"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:text="@string/humidity" />

                        <TextView
                            android:id="@+id/humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunito_bold"
                            android:gravity="end"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            tools:text="120 km/h" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunito"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:text="@string/wind_speed" />

                        <TextView
                            android:id="@+id/wind_speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunito_bold"
                            android:gravity="end"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            tools:text="27 %" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunito"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:text="@string/temperature" />

                        <TextView
                            android:id="@+id/temperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunito_bold"
                            android:gravity="end"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            tools:text="49 F" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/colorActivity"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:padding="20dp">
                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        tools:text="@string/nyungwe_description" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
